** [r14858] Runtime class improvements.
FIXME:  currently borks CFFI-TESTS
** [r14859] Add multiple disassembler selector.
** [r14860] Add EXTERNAL-ONLY option to APROPOS.
** [r14861] Fix nested classes from JARs not visible with JSS.

* Introduced "time of time" semantics for {encode,decode}-universal
  time.

  FIXME:  breaking a number of ANSI tests.  Need to conditionalize runtime behavior.

Fixes
-----

*  RandomCharacterFile (vibhu)

*  (JSS) Ensure the interpolation of Java symbol names as strings

Updates
------

* asdf-3.1.7.26

* jna-4.2.2


Version 1.3.3
=============
http://abcl.org/svn/tags/1.3.3/
18-SEP-2015

Enhancements
------------

*  [r14802,r14813] Add character name for non-breaking space

   Use a human readable name for character 160, #\No-break_space,
   following sbcl, ccl and clisp. This permits the Quicklisp system
   spinneret to load.  The #\No-break_space name is a valid
   CHAR-NAME/NAME-CHAR pair, but is not emitted as a glyph under the
   current output encoding under the CL:FORMAT "~:c" directive as
   these implementations do by default.

   Thanks to Javier Olaechea.

Fixes
-----

* [r14808] CL:FILE-WRITE-DATE fixed for logical pathnames

* ANSI-TEST

** Update references to new git repository at
   <git+https://gitlab.common-lisp.net/ansi-test/ansi-test.git>

** ABCL now runs the git master consolidated ANSI-TEST suite which
   features subdirectories and distinquished value for
   *DEFAULT-PATHNAME-DEFAULTS*.

** ABCL.TEST.ANSI:CLEAN-TESTS now acts recursively via appropiate
   Pathname wildcards to match new directory structure.

* ASDF

  Fix COMPILE-SYSTEM to offer full ANSI environment for ASDF and
  ABCL-CONTRIB. 

* ABCL-ASDF

** Use of Maven has been robustified.

*** [r14803] Fix usage with all known versions through maven-3.3.3

   Addresses <http://abcl.org/trac/ticket/390>.

*** [r14806] Fix usage with specifying local Maven repository

** More complete attempt at re-initialization via
